--- a/style.css
+++ b/style.css
@@ -105,10 +105,13 @@ color: white;
     font-weight: bold;
 }
 
-.paragraf {
+pre{
     color: white;
     text-align: left;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 30px;
+    
+    
 
 }
 .cp {
